# bluesoft

./: README.md  pyproject.toml
app/: admin.py  choices.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_remove_transaction_account_transaction_origin.py
app/utils/: generics.py  randoms.py
config/: settings.py
fixtures/: data.json
